added 'this website' to projects

--- a/templates/me/projects/index.html
+++ b/templates/me/projects/index.html
@@ -13,6 +13,7 @@
 		<h2><i>the things i've made!</i></h2>
 		<p>Here's where you'll be able to find all the projects I'd like to showcase and write about!</p>
 		<a href="projects/parkour-replays">don't miss the bell</a>
+		<a href="projects/website">this website</a>
 	</div>
 </body>
 
