--- a/static/global.css
+++ b/static/global.css
@@ -6,7 +6,8 @@ h1,h2,h3{line-height:1.2}
 .dimmer{position:absolute;background:rgba(0,0,0,0.6);top:0;bottom:0;right:0;left:0;z-index:1;}
 .content{position:relative;z-index:2;display:inline-block;}
 h1, h2, h3, h4, h5, h6, p, a, ul, label, tr{font-family:montserrat, sans-serif;color:#fff;text-decoration:none;}
-a{text-decoration:underline;}
+a{text-decoration:underline;line-height:1.05;}
+a img{max-width:150px;margin:auto;padding-bottom:10px;}
 thead{text-decoration:underline;text-decoration-color:#fff;}
 h1{font-size:225%;letter-spacing:1px;}
 h2{font-size:125%;}
@@ -19,8 +20,10 @@ a:not(h1 a, p a){padding:20px;display:inline-block;background:rgba(255,255,255,0
 .navbar div{display:flex;margin-left:auto;}
 .navbar{position:relative;z-index:3;display:flex;align-items:center;flex-wrap:wrap;}
 label{padding:0 5px 0 0;}
-input::-webkit-inner-spin-button{-webkit-appearance:none;margin:0;}
-input[type=number]{width:50px;-moz-appearance:textfield;}
+input::-webkit-inner-spin-button{appearance:none;margin:0;}
+input[type=number]{width:50px;appearance:textfield;}
 .monospace{font-family:monospace;font-size:18px;}
 .nodisplay{display:none;}
+.gallery{display:flex;flex-wrap:wrap;}
+.gallery a{margin:3px;display:flex;flex-direction:column;flex-grow:1;text-align:center;}
 #map_iframe{position:fixed;top:0px;left:0px;bottom:0px;right:0px;width:100%;height:100%;border:none;margin:0;padding:0;overflow:hidden;}
