--- a/templates/me/projects/index.html
+++ b/templates/me/projects/index.html
@@ -12,8 +12,10 @@
 	<div class="content">
 		<h2><i>the things i've made!</i></h2>
 		<p>Here's where you'll be able to find all the projects I'd like to showcase and write about!</p>
-		<a href="projects/parkour-replays">don't miss the bell</a>
-		<a href="projects/website">this website</a>
+		<div class="gallery">
+			<a href="projects/parkour-replays"><img src="{{STATIC_URL}}projects/dmtb.png">don't miss the bell</a>
+			<a href="projects/website"><img src="https://cdn.catpowered.net/site/icons/apple-touch-icon.png">this website</a>
+		</div>
 	</div>
 </body>
 
