tweaked wording of website project

--- a/templates/me/projects/website.html
+++ b/templates/me/projects/website.html
@@ -15,7 +15,7 @@
         <a href="https://github.com/quagsirus/catpowered.net">git repo</a>
         <br />
         <h2>description</h2>
-        <p>This is my entire personal website, written in (mostly) pure HTML and CSS with no templates, using the Django framework for some simple backend services such as authentication for secure areas, randomised page elements, and the ability to include common elements as sub-templates.</p>
+        <p>This is my entire personal website, written in pure HTML and CSS with no templates and minimal javascript, using the Django framework for some simple backend services such as authentication for secure areas, randomised page elements, and the ability to include common elements as sub-templates.</p>
         <h2>primary hurdles</h2>
         <ul>
             <li>learning django's templating system (handlebars)</li>
