tweaked layout of about me

--- a/templates/me/index.html
+++ b/templates/me/index.html
@@ -10,13 +10,13 @@
 	{% include "includes/background.shtml" with specific="cats" %}
     {% include "includes/navbar.shtml" with title="about me!" %}
 	<div class="content">
-		<h2>a.k.a avery, tom, thomas, debug</h2>
+		<h2>a.k.a tom, thomas, avery, debug</h2>
 		<h3><i>games tech student since september 2022!</i></h3>
-		<p>Hi, I'm avery, and I like making dumb stuff for fun in my spare time, like this website!</p>
+		<p>You found me! Click over to the projects page to view my portfolio, but in the meantime, here are the best ways to get in touch with me:</p>
 		<ul class="links">
-			<li><a href="mailto:quagsirus@catpowered.net">email</a></li>
-			<li><a href="https://github.com/quagsirus">github</a></li>
+			<li><a href="mailto:hello@catpowered.net">email</a></li>
 			<li><a href="https://t.me/quagsirus">telegram</a></li>
+			<li><a href="https://github.com/quagsirus">github</a></li>
 		</ul>
 	</div>
 </body>
