--- a/templates/me/index.html
+++ b/templates/me/index.html
@@ -10,8 +10,9 @@
 	{% include "includes/background.shtml" with specific="cats" %}
     {% include "includes/navbar.shtml" with title="about me!" %}
 	<div class="content">
-		<h2>a.k.a tom, thomas, avery, debug</h2>
+		<h2>Thomas Palmer</h2>
 		<h3><i>games tech student since september 2022!</i></h3>
+		<h3>a.k.a tom, thomas, avery, debug</h3>
 		<p>You found me! Click over to the projects page to view my portfolio, but in the meantime, here are the best ways to get in touch with me:</p>
 		<ul class="links">
 			<li><a href="mailto:hello@catpowered.net">email</a></li>
