changed project page naming

--- a/templates/me/projects/dont-miss-the-bell.html
+++ b/templates/me/projects/dont-miss-the-bell.html
@@ -16,11 +16,12 @@
         <a href="https://github.com/DontMissTheBell/dmtb_server">git repo (server)</a>
         <br />
         <h2>description</h2>
-        <p>A speedrun focused 3D parkour game with an online global leaderboard. I built this game in a group of 8 using Unity and Rust.</p>
+        <p>A speedrun focused 3D parkour game with an online leaderboard. I built this game in a group of 8 using Unity (C#) and Rust.</p>
         <h2>my contributions</h2>
         <ul>
             <li>designing a binary format to store 'ghosts' (replays) in, and functionality for uploading ghosts to the server, handled mostly within <a class="inline-a" href="https://github.com/DontMissTheBell/DontMissTheBell/blob/main/Assets/Scripts/GhostManager.cs">this script</a>.</li>
             <li>complete control over and development of the game server</li>
+            <li>applying my knowledge from <i>sins of the squirrels</i> to make a more robust leaderboard in Rust</li>
             <li>setting up lighting and post processing in unity</li>
             <li>managing version control and providing support to teammates when they ran into problems merging</li>
             <li>designing main menu and leaderboard ui and programming related functionality</li>
