--- a/templates/me/index.html
+++ b/templates/me/index.html
@@ -13,7 +13,8 @@
 		<h2>Thomas Palmer</h2>
 		<h3><i>games tech student since september 2022!</i></h3>
 		<h3>a.k.a tom, quag, debug, avery, and catpowered elsewhere</h3>
-		<p>You found me! Click over to the projects page to view my portfolio, but in the meantime, here are the best ways to get in touch with me:</p>
+		<p>You found me! Click over to the projects page to view my portfolio.</p>
+		<p>If you like what I do, I'd love to hear from you! Here are the best ways to get in touch with me:</p>
 		<ul class="links">
 			<li><a href="mailto:hello@catpowered.net">email</a></li>
 			<li><a href="https://t.me/quagsirus">telegram</a></li>
