--- a/templates/me/projects/sins-of-the-squirrels.html
+++ b/templates/me/projects/sins-of-the-squirrels.html
@@ -19,7 +19,7 @@
         <p>A tech demo of an arcade fighting game with an online leaderboard. I built this game in a group of 4 using Unity (C#) and Python.</p>
         <h2>my contributions</h2>
         <ul>
-            <li>creating a lightweight web server in Python for storing and managin the game's leaderboard</li>
+            <li>creating a lightweight web server in Python for storing and managing the game's leaderboard</li>
             <li>all UI programming</li>
             <li>designing and implementing main gameplay mechanics</li>
             <li>refactoring code to be more maintainable</li>
