add full usernames

--- a/templates/me/index.html
+++ b/templates/me/index.html
@@ -12,7 +12,7 @@
 	<div class="content">
 		<h2>Thomas Palmer</h2>
 		<h3><i>games tech student since september 2022!</i></h3>
-		<h3>a.k.a tom, quag, debug, avery, and catpowered elsewhere</h3>
+		<h3>a.k.a tom, quagsirus, debugproto, avery, and catpowered elsewhere</h3>
 		<p>You found me! Click over to the projects page to view my portfolio.</p>
 		<p>If you like what I do, I'd love to hear from you! Here are the best ways to get in touch with me:</p>
 		<ul class="links">
