--- a/templates/me/projects/dont-miss-the-bell.html
+++ b/templates/me/projects/dont-miss-the-bell.html
@@ -19,7 +19,7 @@
         <p>A speedrun focused 3D parkour game with an online leaderboard. I built this game in a group of 8 using Unity (C#) and Rust.</p>
         <h2>my contributions</h2>
         <ul>
-            <li>designing a binary format to store 'ghosts' (replays) in, and functionality for uploading ghosts to the server, handled mostly within <a class="inline-a" href="https://github.com/DontMissTheBell/DontMissTheBell/blob/main/Assets/Scripts/GhostManager.cs">this script</a>.</li>
+            <li>designing a binary format to store 'ghosts' (replays) in, and functionality for uploading ghosts to the server, handled mostly within <a class="inline-a" href="https://github.com/DontMissTheBell/DontMissTheBell/blob/main/Assets/Scripts/GhostManager.cs">&lt;this script&gt;</a>.</li>
             <li>complete control over and development of the game server</li>
             <li>applying my knowledge from <i>sins of the squirrels</i> to make a more robust leaderboard in Rust</li>
             <li>setting up lighting and post processing in unity</li>
