lowercase company name

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 	{% include "includes/background.shtml" %}
 	<div class="content">
 		<h1>catpowered</h1>
-		<h2>CATPOWERED GAMES LTD</h2>
+		<h2>catpowered games ltd</h2>
 		<ul class="links">
 			<li><a href="about">about</a></li>
 			<li><a href="https://blog.catpowered.net/">blog</a></li>
