add dmtb blog posts

--- a/templates/me/projects/dont-miss-the-bell.html
+++ b/templates/me/projects/dont-miss-the-bell.html
@@ -14,6 +14,8 @@
         <a href="https://catpowered.itch.io/dont-miss-the-bell">itch.io</a>
         <a href="https://github.com/DontMissTheBell/DontMissTheBell">git repo (game client)</a>
         <a href="https://github.com/DontMissTheBell/dmtb_server">git repo (server)</a>
+        <a href="https://blog.catpowered.net/posts/creating-a-binary-format-for-game-replay-data/">blog post (replay format)</a>
+        <a href="https://blog.catpowered.net/posts/dmtb-rust-game-server/">blog post (server)</a>
         <br />
         <h2>description</h2>
         <p>A speedrun focused 3D parkour game with an online leaderboard. I built this game in a group of 8 using Unity (C#) and Rust.</p>
