--- a/templates/lost.html
+++ b/templates/lost.html
@@ -10,7 +10,7 @@
 		<div class="content">
 			<h1>You found one of my devices!</h1>
 			<p>Firstly, thank you for getting this far!</p>
-			<p>If you'd like to be an absolute hero, please contact me via one of the following methods so we can arrange getting my device back to me, and possibly getting you a reward!</p>
+			<p>Please contact me via one of the following methods:</p>
 			<ul class="links">
 				<li><a href="tel:+447490760401">phone</a> (+44 7490760401)</li>
 				<li><a href="https://t.me/quagsirus">telegram</a> (@quagsirus)</li>
