--- a/django/static/global.css
+++ b/django/static/global.css
@@ -5,7 +5,7 @@ h1,h2,h3{line-height:1.2}
 .background video{position:absolute;top:0;left:0;min-width:100%;min-height:100%;pointer-events:none;object-fit:cover;image-rendering:pixelated;}
 .dimmer{position:absolute;background:rgba(0,0,0,0.6);top:0;bottom:0;right:0;left:0;z-index:1;}
 .content{position:relative;z-index:2;display:inline-block;}
-h1, h2, h3, h4, h5, h6, p, a, ul, label, tr, button{font-family:montserrat, sans-serif;color:#fff;background:transparent;text-decoration:none;}
+h1, h2, h3, h4, h5, h6, p, a, ul, label, tr, button{font-family:montserrat, sans-serif;color:#fff;background:#0000;text-decoration:none;}
 button{background-color:transparent;border:none;cursor:pointer;padding:0;}
 a, button{text-decoration:underline;line-height:1.05;font-size:inherit;}
 a img{max-width:150px;margin:auto;padding-bottom:10px;}
@@ -16,7 +16,7 @@ h3{font-size:medium;}
 ul > li, ul > li:before{content:"- ";text-indent:-5px;list-style-type:none;}
 li{padding: 4px;}
 a:not(h1 a, p a, .inline-a){padding:20px;display:inline-block;background:rgba(255,255,255,0.1);text-indent:initial;}
-#fade{opacity:65%;}
+#fade{opacity:0.65;}
 .navbar div a{font-size:125%;margin:0 3px;}
 .navbar div{display:flex;margin-left:auto;}
 .navbar{position:relative;z-index:3;display:flex;align-items:center;flex-wrap:wrap;}
