--- a/django/static/global.css
+++ b/django/static/global.css
@@ -1,4 +1,4 @@
-body{margin:20px auto;max-width:900px;line-height:1.6;font-size:18px;color:#444;padding:0 10px}
+body{margin:20px auto;max-width:900px;line-height:1.6;font-size:1.125rem;color:#444;padding:0 10px}
 h1,h2,h3{line-height:1.2}
 .background{background:#000;position:fixed;top:0;right:0;bottom:0;left:0;z-index:-99;}
 .video-container,
@@ -23,7 +23,7 @@ a:not(h1 a, p a, .inline-a){padding:20px;display:inline-block;background:rgba(25
 label{padding:0 5px 0 0;}
 input::-webkit-inner-spin-button{appearance:none;margin:0;}
 input[type=number]{width:50px;appearance:textfield;}
-.monospace{font-family:monospace;font-size:18px;}
+.monospace{font-family:monospace;}
 .nodisplay{display:none;}
 .gallery{display:flex;flex-wrap:wrap;}
 .gallery a{margin:3px;display:flex;flex-direction:column;flex-grow:1;text-align:center;}
