--- a/django/templates/me/projects/dont-miss-the-bell.html
+++ b/django/templates/me/projects/dont-miss-the-bell.html
@@ -11,11 +11,13 @@
     {% include "includes/navbar.shtml" with title="don't miss the bell" %}
     <div class="content">
         <h4><i>parkour game with replay system</i></h4>
+		<h3>links</h3>
         <a href="https://catpowered.itch.io/dont-miss-the-bell">itch.io</a>
-        <a href="https://github.com/DontMissTheBell/DontMissTheBell">git repo (game client)</a>
+        <a href="https://github.com/DontMissTheBell/DontMissTheBell">git repo (client)</a>
         <a href="https://github.com/DontMissTheBell/dmtb_server">git repo (server)</a>
-        <a href="https://blog.catpowered.net/posts/creating-a-binary-format-for-game-replay-data/">blog post (replay format)</a>
-        <a href="https://blog.catpowered.net/posts/dmtb-rust-game-server/">blog post (server)</a>
+		<h3>blog posts</h3>
+        <a href="https://blog.catpowered.net/posts/creating-a-binary-format-for-game-replay-data/">replay format</a>
+        <a href="https://blog.catpowered.net/posts/dmtb-rust-game-server/">server</a>
         <br />
         <h2>description</h2>
         <p>A speedrun focused 3D parkour game with an online leaderboard. I built this game in a group of 8 using Unity (C#) and Rust.</p>
