--- a/django/templates/me/projects/sins-of-the-squirrels.html
+++ b/django/templates/me/projects/sins-of-the-squirrels.html
@@ -12,8 +12,7 @@
     <div class="content">
         <h4><i>arcade fighting game concept with online leaderboard</i></h4>
         <a href="https://emmaturner.itch.io/sins-of-the-squirrels">itch.io</a>
-        <a href="https://github.com/quagsirus/squirrels">git repo (game client)</a>
-        <a href="https://github.com/quagsirus/squirrels/leaderboard">git repo (server)</a>
+        <a href="https://github.com/quagsirus/squirrels">git repo</a>
         <br />
         <h2>description</h2>
         <p>A tech demo of an arcade fighting game with an online leaderboard. I built this game in a group of 4 using Unity (C#) and Python.</p>
