add sea of thieves

--- a/django/templates/me/projects/index.html
+++ b/django/templates/me/projects/index.html
@@ -10,9 +10,10 @@
 	{% include "includes/background.shtml" with specific="cats" %}
     {% include "includes/navbar.shtml" with title="projects" %}
 	<div class="content">
-		<h2><i>cool stuff i made!</i></h2>
+		<h2><i>cool stuff i've done!</i></h2>
 		<p>Here's where you'll be able to find all the projects I'd like to showcase and write about!</p>
 		<div class="gallery">
+			<a href="projects/sea-of-thieves"><img src="{{STATIC_URL}}projects/sea-of-thieves.webp">sea of thieves</a>
 			<a href="projects/firesale"><img src="{{STATIC_URL}}projects/firesale.png">fireSALE</a>
 			<a href="projects/dont-miss-the-bell"><img src="{{STATIC_URL}}projects/dmtb.png">don't miss the bell</a>
 			<a href="projects/sins-of-the-squirrels"><img src="{{STATIC_URL}}projects/sots.png">sins of the squirrels</a>
