--- a/django/templates/me/projects/index.html
+++ b/django/templates/me/projects/index.html
@@ -14,6 +14,8 @@
 		<p>Here's where you'll be able to find all the projects I'd like to showcase and write about!</p>
 		<div class="gallery">
 			<a href="projects/sea-of-thieves"><img src="{{STATIC_URL}}projects/sea-of-thieves.webp">sea of thieves</a>
+		</div>
+		<div class="gallery">
 			<a href="projects/dont-miss-the-bell"><img src="{{STATIC_URL}}projects/dmtb.png">don't miss the bell</a>
 			<a href="projects/firesale"><img src="{{STATIC_URL}}projects/firesale.png">fireSALE</a>
 			<a href="projects/sins-of-the-squirrels"><img src="{{STATIC_URL}}projects/sots.png">sins of the squirrels</a>
