remove dead/irrelevant links from homepage, add git instance

--- a/django/templates/index.html
+++ b/django/templates/index.html
@@ -13,10 +13,9 @@
 		<h2>catpowered games ltd</h2>
 		<ul class="links">
 			<li><a href="about">about</a></li>
-			<li><a href="https://blog.catpowered.net/">blog</a></li>
+			<li><a href="https://git.catpowered.net/">git</a></li>
 			<li><a href="me">me</a></li>
 			<li><a href="minecraft">minecraft</a></li>
-			<li><a href="{{STATIC_URL}}privacy.html">privacy</a></li>
 		</ul>
 		{% include "includes/user.shtml" %}
 	</div>
