remove telegram, fix wording so email is the only advertised contact method

--- a/django/templates/me/index.html
+++ b/django/templates/me/index.html
@@ -14,11 +14,11 @@
 		<h3><i>games tech student since september 2022!</i></h3>
 		<h3>a.k.a tom, quagsirus, debugproto, avery, and catpowered elsewhere</h3>
 		<p>You found me! Click over to the projects page to view my portfolio.</p>
-		<p>If you like what I do, I'd love to hear from you! Here are the best ways to get in touch with me:</p>
+		<p>If you like what I do, I'd love to hear from you! Drop me an email!</p>
 		<ul class="links">
 			<li><a href="mailto:hello@catpowered.net">email</a></li>
-			<li><a href="https://t.me/quagsirus">telegram</a></li>
 			<li><a href="https://github.com/quagsirus">github</a></li>
+			<li><a href="https://git.catpowered.net/avery">git (self-hosted)</a></li>
 		</ul>
 	</div>
 </body>
