add user section to minecraft page

--- a/django/templates/minecraft/index.html
+++ b/django/templates/minecraft/index.html
@@ -19,6 +19,7 @@
 			    <li>sleep voting</li>
 			</ul>
 			<a href="minecraft/map">✨click here to see the world-map!</a>
+			{% include "includes/user.shtml" %}
 		</div>
 	</body>
 </html>
